[gd_scene load_steps=12 format=2]

[ext_resource path="res://pck/assets/menu/bg-2.jpg" type="Texture" id=2]
[ext_resource path="res://pck/assets/common/zawgyi-one.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://pck/assets/common/check-on.png" type="Texture" id=7]
[ext_resource path="res://pck/assets/common/check-off.png" type="Texture" id=8]
[ext_resource path="res://pck/scripts/button.gd" type="Script" id=9]
[ext_resource path="res://pck/scenes/login.gd" type="Script" id=10]
[ext_resource path="res://pck/prefabs/AlertBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://pck/prefabs/Setting.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.301961, 0.301961, 0.301961, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=5]
size = 30
use_filter = true
font_data = ExtResource( 6 )

[node name="root" type="Node2D"]
script = ExtResource( 10 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 1000, 450 )
texture = ExtResource( 2 )

[node name="Username" type="LineEdit" parent="."]
margin_left = 1300.0
margin_top = 211.0
margin_right = 1700.0
margin_bottom = 291.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
align = 1
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="."]
margin_left = 1300.0
margin_top = 311.0
margin_right = 1700.0
margin_bottom = 391.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
align = 1
secret = true
placeholder_text = "Password"

[node name="Remember" type="CheckButton" parent="."]
margin_left = 1520.0
margin_top = 431.0
margin_right = 1682.0
margin_bottom = 489.0
custom_icons/off = ExtResource( 8 )
custom_icons/on = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1320.0
margin_top = 431.0
margin_right = 1520.0
margin_bottom = 491.0
custom_fonts/font = SubResource( 5 )
text = "Remember"
align = 1
valign = 1

[node name="Login" type="TextureButton" parent="."]
margin_left = 1335.0
margin_top = 573.0
margin_right = 1639.0
margin_bottom = 667.0
script = ExtResource( 9 )

[node name="AlertBox" parent="." instance=ExtResource( 11 )]
position = Vector2( 1000, 980 )
targetY = 840.0

[node name="Setting" parent="." instance=ExtResource( 12 )]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Login" to="." method="_on_Login_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
